# OpenPhotoCull

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: blur_debug.rs  face_perf.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: analyze.rs  export.rs  mod.rs  review.rs  scan.rs
src-tauri/src/imaging/: mod.rs
src-tauri/src/index/: discovery.rs  metadata.rs  mod.rs  store.rs
src-tauri/src/pipeline/: blur.rs  closed_eyes.rs  duplicates.rs  exposure.rs  face_grouping.rs  mod.rs  registry.rs  saliency.rs  traits.rs
src-tauri/src/thumbnail/: apple_imageio.rs  mod.rs
src/components/: BulkActions.tsx  ComparisonView.tsx  FilterBar.tsx  FolderPicker.tsx  PersonFilter.tsx  PhotoDetail.tsx  PhotoGrid.tsx  ReviewLayout.tsx  ScanProgress.tsx  SettingsPanel.tsx
src/lib/: duplicates.ts  tauri.ts
src/store/: index.ts  types.ts
src/styles/: global.css
