[package]
name = "photo-scrub"
version = "0.1.0"
edition = "2021"
default-run = "photo-scrub"

[lib]
name = "photo_scrub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "photo-scrub"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "gpu_bench"
path = "src/bin/gpu_bench.rs"

[[bin]]
name = "vision_bench"
path = "src/bin/vision_bench.rs"

[[bin]]
name = "gen_test_images"
path = "src/bin/gen_test_images.rs"

[[bin]]
name = "face_debug"
path = "src/bin/face_debug.rs"

[[bin]]
name = "face_perf"
path = "src/bin/face_perf.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
image = { version = "0.25", features = ["jpeg", "png", "tiff", "webp"] }
fast_image_resize = { version = "5", features = ["image"] }
turbojpeg = "1"
kamadak-exif = "0.5"
image_hasher = "2"
rayon = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
trash = "5"
directories = "5"
objc2 = "0.6"
objc2-foundation = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Optimize dependencies even in dev builds — image decoding and
# Vision FFI are 10-20x slower without optimization.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
